--- a/css/estilos.css
+++ b/css/estilos.css
@@ -62,6 +62,7 @@ body {
   background: #fd53c0;
   width: 190px;
   height: 35px;
+  text-transform: capitalize;
 }
 
 .hero-image {
@@ -117,11 +118,7 @@ body {
   justify-content: space-around;
   align-items: center;
   height: 400px;
-  margin: 0px 0px 30px 0px;
-}
-
-.content1Wrapper {
-  /* margin: 0px 0px 0px 30px; */
+  margin: 0px 0px 20px 0px;
 }
 
 .content-title {
@@ -135,4 +132,17 @@ body {
 
 .content-image {
   width: 400px;
+}
+
+/*------------------------------ Content1 ---------------------------------------*/
+.section2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 30px 0px 20px 0px;
+}
+
+.section2-title {
+  margin: 0px 0px 20px 0px;
+  text-transform: capitalize;
 }
